--- a/index.html
+++ b/index.html
@@ -1,7 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
+<head>
+    <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+	<meta charset='UTF-8'>
+	<title></title>
+	<meta name='ad.size' content='width=300,height=250'> 
+	<link rel='stylesheet' href='style.css'>
+
+	<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
+
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/utils/Draggable.min.js"></script>
+	<script src="https://s0.2mdn.net/ads/studio/Enabler.js"></script>
+	<script type="text/javascript" src="script.js"></script>
+	
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<div id="container">
+		<div id="slideIntro" class="slide">
+			<div class="intro_bg">
+				<p class="headline_intro">Sustainable investing</p>
+				<p class="sub_headline_intro">What do you believe in?</p>
+				<p class="swipe_text">SWIPE TO LEARN MORE »»»</p>
+			</div>
+		</div>
+		<div id="slide1" class="slide">
+				<p class="headline">Impact Investing</p>
+				<p class="sub_headline">Investing in activities with a positive impact on the environment or society. The main focus here is “doing good”, rather than investment performance.</p>
+				<div class="cta"><span>Learn more »</span></div>
+		</div>
+		<div id="slide2" class="slide">
+				<p class="headline">Thematic</p>
+				<p class="sub_headline">Investment focused on opportunities related to a single theme or megatrend. Results in a concentrated portfolio that should perform if the trend develops as expected.</p>
+				<div class="cta"><span>Learn more »</span></div>
+		</div>
+		<div id="slide3" class="slide">
+				<p class="headline">Best in class</p>
+				<p class="sub_headline">Only invests in companies with excellent ESG performance relative to others in their sector, often based on external database information. The focus is not on companies with moderate ESG scores with other attractive characteristics.</p>
+				<div class="cta"><span>Learn more »</span></div>
+		</div>
+		<div id="slide4" class="slide">
+				<p class="headline">Integration</p>
+				<p class="sub_headline">Includes ESG as a fully integrated element of the investment process, with ESG scorings combined with other factors to support investment decisions. The aim is a portfolio blending ESG and other characteristics...</p>
+				<div class="cta"><span>Learn more »</span></div>
+		</div>
+		<div id="slide5" class="slide">
+				<p class="headline">Engagement</p>
+				<p class="sub_headline">Investors aim to influence company management to improve business practices. A wide range of engagement levels exist, ranging from proxy voting through to public engagement as practiced by prominent activist funds.</p>
+				<div class="cta"><span>Learn more »</span></div>
+		</div>
+		<div id="slide6" class="slide">
+				<p class="headline">Exclusion</p>
+				<p class="sub_headline">Filtering out undesirable companies or sectors, either based on convictions or on international norms e.g. regarding weapons. Typically applied at the start of the investment process. While the..</p>
+				<div class="cta"><span>Learn more »</span></div>
+		</div>
+		<div class="logo_holder">
+			<img class="logo-img" src="logo.svg" />
+		</div>
+		<p class="top_text">Asset Management</p>
+	</div>
 </body>
 </html>
